Refactor promotion and voucher handling: remove VoucherController, related DTOs, and repositories; update PromotionValidationGrpcClient for null checks; add AdminOrderGrpcServer tests; adjust UserEmailGrpcClient to throw exceptions for null user IDs; clean up database migration scripts and seed data.